Fixed Quick-Button overlapping the Navigation bar

--- a/src/styles/css/main.stylesheet.css
+++ b/src/styles/css/main.stylesheet.css
@@ -240,17 +240,21 @@ input[type='text']:focus {
 
 .quick-btn {
     display: flex;
-    position: absolute;
+    margin: auto;
     width: 400px;
     height: 33px;
-    top: 90px;
-    right: 280px;
+    top: 3px;
+    right: 40px;
+    float:right;
     border-radius: 7px;
     z-index: 100;
 }
 
 .quick-btn > div {
     margin: auto;
+}
+.main{
+    top: 1000px;
 }
 
 .quick-btn > div > button {
@@ -323,7 +327,7 @@ input[type='text']:focus {
 .draggable-panel-css {
     border-radius: 5px;
     z-index: 70;
-    transition: background 0.5s ease-out;
+    /* transition: background 0.5s ease-out; */
     position: fixed;
 }
 
@@ -723,8 +727,9 @@ div.icon img {
 .moduleProperty {
     font: inherit;
     width: 250px;
-    top: 90px;
     right: 10px;
+    /* position:fixed; */
+    float: right;
 }
 
 .layoutElementPanel {
@@ -742,7 +747,8 @@ div.icon img {
     position: fixed;
     cursor: pointer;
     left: 300px;
-    top: 90px;
+    /* top: 90px; */
+    width: fit-content;
 }
 
 .timing-diagram-panel .panel-header {
@@ -765,7 +771,8 @@ div.icon img {
     position: fixed;
     cursor: pointer;
     left: 10px;
-    top: 470px;
+    /* top: 470px; */
+    width:fit-content;
 }
 
 .testbench-manual-panel .panel-header {
@@ -778,7 +785,6 @@ div.icon img {
     text-align: left;
     cursor: move;
 }
-
 .tb-case-arrow {
     border: solid var(--text-panel);
     border-width: 0 3px 3px 0;
